projects/landing-page/styles/styles.css
body {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.alignment {
  padding-left: 256px;
  padding-right: 256px;
}

.dark-background {
  background-color: #1F2937;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-logo {
  font-size: 24px;
  color: #f9faf8;
}

.header-link, .description {
  font-size: 18px;
  color: #e5e7eb;
}

.links-container {
  display: flex;
  gap: 24px;
}

.links-container a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

.hero {
  display: flex;
  gap: 144px;
}

.text {
  flex: 1;
}

.img-container {
  display: flex;
  flex: 1;
  background-color: grey;
  justify-content: center;
  align-items: center;
  color: white;
}

h1 {
  font-size: 48px;
  font-weight: 800;
  color: #f9faf8;
}

.sign-up-button {
  background-color: #3882f6;
  padding: 8px 32px;
  color: white;
  border-radius: 8px;
  text-decoration: none;
}

